--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         </activity>
         <activity android:name=".ListviewActivity" >
         </activity>
+        <activity android:name=".NameActivity" >
+        </activity>
+        <activity android:name=".HandleNameSelectActivity" >
+        </activity>
     </application>
 
 </manifest>
